--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -27,7 +27,8 @@ on early-init
     # Set the security context of /adb_keys if present.
     restorecon /adb_keys
 
-    start ueventd
+    mkdir /mnt 0775 root system
+
 
 on init
     sysclktz 0
